--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@types/node": "20.1.5",
+    "@types/node": "20.1.7",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
@@ -25,6 +25,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0"
   }
 }
